// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getter-generator.js [babel] format 1`] = `
"A getter cannot be a generator. (2:10)
  1 | ({
> 2 |     get *iterator() { },
    |          ^
  3 | });
  4 |"
`;

exports[`getter-generator.js [espree] format 1`] = `
"Unexpected token * (2:9)
  1 | ({
> 2 |     get *iterator() { },
    |         ^
  3 | });
  4 |"
`;

exports[`getter-generator.js [meriyah] format 1`] = `
"[2:9]: A getter cannot be a generator (2:9)
  1 | ({
> 2 |     get *iterator() { },
    |         ^
  3 | });
  4 |"
`;

exports[`getter-with-parameter.js [babel] format 1`] = `
"A 'get' accesor must not have any formal parameters. (1:4)
> 1 | ({ get x(a){} });
    |    ^
  2 |"
`;

exports[`getter-with-parameter.js [espree] format 1`] = `
"getter should have no params (1:9)
> 1 | ({ get x(a){} });
    |         ^
  2 |"
`;

exports[`getter-with-parameter.js [meriyah] format 1`] = `
"[1:10]: Getter functions must have exactly no arguments (1:10)
> 1 | ({ get x(a){} });
    |          ^
  2 |"
`;

exports[`setter-generator.js [babel] format 1`] = `
"A setter cannot be a generator. (2:10)
  1 | ({
> 2 |     set *iterator(iter) { },
    |          ^
  3 | });
  4 |"
`;

exports[`setter-generator.js [espree] format 1`] = `
"Unexpected token * (2:9)
  1 | ({
> 2 |     set *iterator(iter) { },
    |         ^
  3 | });
  4 |"
`;

exports[`setter-generator.js [meriyah] format 1`] = `
"[2:9]: A getter cannot be a generator (2:9)
  1 | ({
> 2 |     set *iterator(iter) { },
    |         ^
  3 | });
  4 |"
`;

exports[`setter-without-parameter.js [babel] format 1`] = `
"A 'set' accesor must have exactly one formal parameter. (1:4)
> 1 | ({ set x(){} });
    |    ^
  2 |"
`;

exports[`setter-without-parameter.js [espree] format 1`] = `
"setter should have exactly one param (1:9)
> 1 | ({ set x(){} });
    |         ^
  2 |"
`;

exports[`setter-without-parameter.js [meriyah] format 1`] = `
"[1:10]: Setter functions must have exactly one argument (1:10)
> 1 | ({ set x(){} });
    |          ^
  2 |"
`;
